# gb28181_rtp_android

./: .gitignore  CMakeLists.txt  MultiRtpTest.java  README.md  README_NATS.md  README_NATS_INTEGRATION.md  build_cmake_clean.bat  build_cmake_en.bat  build_en.bat  build_en.ps1  check_jni_h.bat  restart_clangd.bat  test_env.bat  test_env.ps1
jni/: Android.mk  Application.mk
src/main/cpp/: gb28181_jni.cpp  gb28181_jni.h  gb28181_test.cpp  nats_client.cpp  nats_client.h  nats_test.cpp
src/main/cpp/rtp/: ConcurrentQueueA.h  RtpSendPs.cpp  RtpSendPs.h  h264_streaming_framer.cpp  h264_streaming_framer.h
src/main/java/com/example/gb28181jni/: GB28181.java  MyService.java  NatsExample.java
